--- a/.github/workflows/update-readme-metrics.yml
+++ b/.github/workflows/update-readme-metrics.yml
@@ -1,35 +1,29 @@
-# .github/workflows/update-readme-metrics.yml
-
 name: Update Readme Metrics
-
-on:
-  workflow_dispatch:
+'on':
+  workflow_dispatch: null
   schedule:
-    - cron: '0 0 * * *'
-
+    - cron: 0 0 * * *
 jobs:
   generate-metrics:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-
-      - name: Install dependencies for GitHub Readme Stats (if needed for local generation)
+      - name: >-
+          Install dependencies for GitHub Readme Stats (if needed for local
+          generation)
         run: echo "Dependencies handled by respective actions."
-
       - name: Generate GitHub Readme Stats (Main)
         uses: atharvadeokar/github-readme-stats@v2.2.0
         with:
-          username: ${{ github.repository_owner }}
-          token: ${{ secrets.GH_TOKEN }}
+          username: '${{ github.repository_owner }}'
+          token: '${{ secrets.GH_TOKEN }}'
           count_private: true
           hide_border: true
           title_color: D23BFA
@@ -38,12 +32,11 @@ jobs:
           bg_color: 0d1117
           cache_seconds: 1800
           output_file: assets/github-stats.svg
-
       - name: Generate GitHub Readme Stats (Top Languages)
         uses: atharvadeokar/github-readme-stats@v2.2.0
         with:
-          username: ${{ github.repository_owner }}
-          token: ${{ secrets.GH_TOKEN }}
+          username: '${{ github.repository_owner }}'
+          token: '${{ secrets.GH_TOKEN }}'
           layout: compact
           count_private: true
           hide_border: true
@@ -52,17 +45,24 @@ jobs:
           bg_color: 0d1117
           cache_seconds: 1800
           output_file: assets/top-langs.svg
-
       - name: Generate GitHub Activity Graph
-        run: echo "GitHub Activity Graph is typically served via Vercel or self-hosted API."
-
+        run: >-
+          echo "GitHub Activity Graph is typically served via Vercel or
+          self-hosted API."
       - name: Generate GitHub Profile Trophy
-        run: echo "GitHub Profile Trophy is typically served via Vercel or self-hosted API."
-
+        run: >-
+          echo "GitHub Profile Trophy is typically served via Vercel or
+          self-hosted API."
       - name: Commit and push generated images
-        run: |
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        run: >
+          git config --global user.email
+          "41898282+github-actions[bot]@users.noreply.github.com"
+
           git config --global user.name "github-actions[bot]"
+
           git add assets/*.svg
-          git commit -m "Update GitHub Readme Stats and Top Languages" || echo "No changes to commit"
+
+          git commit -m "Update GitHub Readme Stats and Top Languages" || echo
+          "No changes to commit"
+
           git push
