--- a/.github/workflows/waka_stats.yml
+++ b/.github/workflows/waka_stats.yml
@@ -1,33 +1,24 @@
-# Nome do Workflow
 name: Waka Readme Stats
 
 on:
-  # Permite que você rode esta automação manualmente pela aba Actions
   workflow_dispatch:
-  # Agenda a execução para rodar todo dia à meia-noite (UTC)
   schedule:
     - cron: '0 */6 * * *'
 
 permissions:
-  # Permite que a Action tenha acesso de escrita para atualizar o README
   contents: write
 
 jobs:
   update-readme:
-    name: Update README with WakaTime Stats
+    name: Update Readme with Waka Stats
     runs-on: ubuntu-latest
     steps:
-      # Esta é a Action da comunidade que faz todo o trabalho
-      - uses: anmol098/waka-readme-stats@master
+      - uses: actions/checkout@v4
+      - uses: anmol098/waka-readme-stats@v4
         with:
-          # Pega a chave da API do cofre de Secrets que configuramos
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          # Token especial do GitHub, necessário para a Action poder editar seu repositório
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-          # --- Opções de Customização (Você pode mudar "True" ou "False") ---
-          SHOW_OS: "False"           # Mostrar o Sistema Operacional
-          SHOW_PROJECTS: "False"      # Mostrar os projetos
-          SHOW_EDITORS: "True"        # Mostrar os editores de código
-          SHOW_TIMEZONE: "False"      # Mostrar o fuso horário
-          SHOW_LANGUAGE_PER_REPO: "False" # Mostrar linguagens por repositório
+          SHOW_OS: "False"
+          SHOW_PROJECTS: "False"
+          SHOW_EDITORS: "True"
